--- a/planning/behavior_path_planner/config/avoidance/avoidance.param.yaml
+++ b/planning/behavior_path_planner/config/avoidance/avoidance.param.yaml
@@ -178,7 +178,8 @@
           max_departure_from_lane: 0.5                  # [m]
         # avoidance distance parameters
         longitudinal:
-          prepare_time: 2.0                             # [s]
+          min_prepare_time: 1.0                         # [s]
+          max_prepare_time: 2.0                         # [s]
           min_prepare_distance: 1.0                     # [m]
           min_slow_down_speed: 1.38                     # [m/s]
           buf_slow_down_speed: 0.56                     # [m/s]
