--- a/planning/behavior_path_avoidance_module/config/avoidance.param.yaml
+++ b/planning/behavior_path_avoidance_module/config/avoidance.param.yaml
@@ -25,93 +25,85 @@
       # avoidance is performed for the object type with true
       target_object:
         car:
-          execute_num: 1                               # [-]
           moving_speed_threshold: 1.0                  # [m/s]
           moving_time_threshold: 2.0                   # [s]
           lateral_margin:
             soft_margin: 0.7                           # [m]
             hard_margin: 0.3                           # [m]
             hard_margin_for_parked_vehicle: 0.3        # [m]
+          longitudinal_margin: 0.0                     # [m]
           max_expand_ratio: 0.0                        # [-]
           envelope_buffer_margin: 0.5                  # [m]
-          safety_buffer_longitudinal: 0.0              # [m]
         truck:
-          execute_num: 1
           moving_speed_threshold: 1.0                  # 3.6km/h
           moving_time_threshold: 2.0
           lateral_margin:
             soft_margin: 0.9                           # [m]
             hard_margin: 0.1                           # [m]
             hard_margin_for_parked_vehicle: 0.1        # [m]
+          longitudinal_margin: 0.0
           max_expand_ratio: 0.0
           envelope_buffer_margin: 0.5
-          safety_buffer_longitudinal: 0.0
         bus:
-          execute_num: 1
           moving_speed_threshold: 1.0                  # 3.6km/h
           moving_time_threshold: 2.0
           lateral_margin:
             soft_margin: 0.9                           # [m]
             hard_margin: 0.1                           # [m]
             hard_margin_for_parked_vehicle: 0.1        # [m]
+          longitudinal_margin: 0.0
           max_expand_ratio: 0.0
           envelope_buffer_margin: 0.5
-          safety_buffer_longitudinal: 0.0
         trailer:
-          execute_num: 1
           moving_speed_threshold: 1.0                  # 3.6km/h
           moving_time_threshold: 2.0
           lateral_margin:
             soft_margin: 0.9                           # [m]
             hard_margin: 0.1                           # [m]
             hard_margin_for_parked_vehicle: 0.1        # [m]
+          longitudinal_margin: 0.0
           max_expand_ratio: 0.0
           envelope_buffer_margin: 0.5
-          safety_buffer_longitudinal: 0.0
         unknown:
-          execute_num: 1
           moving_speed_threshold: 0.28                 # 1.0km/h
           moving_time_threshold: 1.0
           lateral_margin:
             soft_margin: 0.7                           # [m]
             hard_margin: -0.2                          # [m]
             hard_margin_for_parked_vehicle: -0.2       # [m]
+          longitudinal_margin: 0.0
           max_expand_ratio: 0.0
           envelope_buffer_margin: 0.1
-          safety_buffer_longitudinal: 0.0
         bicycle:
-          execute_num: 1
           moving_speed_threshold: 0.28                 # 1.0km/h
           moving_time_threshold: 1.0
           lateral_margin:
             soft_margin: 0.7                           # [m]
             hard_margin: 0.5                           # [m]
             hard_margin_for_parked_vehicle: 0.5        # [m]
+          longitudinal_margin: 1.0
           max_expand_ratio: 0.0
           envelope_buffer_margin: 0.5
-          safety_buffer_longitudinal: 1.0
         motorcycle:
-          execute_num: 1
           moving_speed_threshold: 1.0                  # 3.6km/h
           moving_time_threshold: 1.0
           lateral_margin:
             soft_margin: 0.7                           # [m]
             hard_margin: 0.3                           # [m]
             hard_margin_for_parked_vehicle: 0.3        # [m]
+          longitudinal_margin: 1.0
           max_expand_ratio: 0.0
           envelope_buffer_margin: 0.5
-          safety_buffer_longitudinal: 1.0
         pedestrian:
-          execute_num: 1
           moving_speed_threshold: 0.28                 # 1.0km/h
           moving_time_threshold: 1.0
           lateral_margin:
             soft_margin: 0.7                           # [m]
             hard_margin: 0.5                           # [m]
             hard_margin_for_parked_vehicle: 0.5        # [m]
+          longitudinal_margin: 1.0
           max_expand_ratio: 0.0
           envelope_buffer_margin: 0.5
-          safety_buffer_longitudinal: 1.0
         lower_distance_for_polygon_expansion: 30.0      # [m]
         upper_distance_for_polygon_expansion: 100.0     # [m]
 
